--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "node ./deploy.js"
+    "deploy": "yarn build && node ./deploy.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
